[package]
name = "xintong-core-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }

# 修复: 删除了旧的 axum-extra = "0.9"
# 并保留了带 "typed-headers" 功能的这一行
# 修复: "typed-headers" (复数) 是错的, 应该是 "typed-header" (单数)
axum-extra = { version = "0.9", features = ["typed-header"] } 
    
deadpool-redis = "0.14"
    
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-stream = "0.1"

# --- JWT 依赖 ---
jsonwebtoken = "9"
headers = "0.4"
once_cell = "1" 
lazy_static = "1.4"